# beginner-rust

./: .gitignore  some.txt
My_box/: Cargo.toml
Struct/src/: main.rs
add/: Cargo.toml
add/add_on/: Cargo.toml
add/adder/: Cargo.toml
add_three/src/: main.rs
adder/src/: lib.rs
advance_types/: Cargo.toml
as_keyword/: Cargo.toml
borrow_checking_with_string/: Cargo.toml
bufferwriter/: Cargo.toml
bug_fix_challange/: Cargo.toml
capitalize_first/: Cargo.toml
closures_operations/: Cargo.toml
comparing/: Cargo.toml
composing_string/: Cargo.toml
converting_string_to_pig_latin/: Cargo.toml
dref_operator/: Cargo.toml
experiment_with_traits/: Cargo.toml
file_use/: Cargo.toml  sample.txt  test_file.txt
function_args/: Cargo.toml
gui_thing/: Cargo.toml
hasmap/: Cargo.toml
input_of_the_vector/: Cargo.toml
irrefutable_and_refutable_patterns/: Cargo.toml
iter_sum_fn/: Cargo.toml
match_function/: Cargo.toml
methods_/: Cargo.toml
mode_and_median_usinghasmap/: Cargo.toml
move_closres_with_threads/: Cargo.toml
my_crates/: Cargo.toml
my_crates/src/: lib.rs
new_restaurant/: Cargo.toml
null_val/: Cargo.toml
operations_with_string/: Cargo.toml
package_crates_and_modules/: Cargo.toml
progressbar/: Cargo.toml
ref_cell_again/: Cargo.toml
some_more_closures/: Cargo.toml
some_scripts/: Cargo.toml
thread_usage/: Cargo.toml
transfer_data_between_threads/: Cargo.toml
tree_ds/: Cargo.toml
trim/: Cargo.toml
type_of_string/: Cargo.toml
using_Result_in_test/: Cargo.toml
using_result_in_test/: Cargo.toml
(+89 files in other folders)
